# PersonalAssistant

./: .gitignore  Cargo.toml  README.md  build.rs
config/: default.toml  mcp.toml.example  runtime.toml
config/persona/: global.md
config/persona/agents/: default.md
crates/pa-agent/: Cargo.toml
crates/pa-agent/src/: agent.rs  auth_profile.rs  lib.rs  router.rs  sandbox.rs
crates/pa-channel-feishu/: Cargo.toml
crates/pa-channel-feishu/src/: channel.rs  client.rs  config.rs  event.rs  lib.rs  types.rs
crates/pa-config/: Cargo.toml
crates/pa-config/src/: env.rs  lib.rs  loader.rs  persona.rs  settings.rs
crates/pa-core/: Cargo.toml
crates/pa-core/src/: agent.rs  error.rs  event.rs  lib.rs  message.rs  tool.rs
crates/pa-gateway/: Cargo.toml
crates/pa-gateway/src/: alert.rs  auth.rs  client.rs  events.rs  gateway.rs  lib.rs  log_broadcast.rs  metrics.rs  protocol.rs  server.rs  watchdog.rs
crates/pa-llm/: Cargo.toml
crates/pa-llm/src/: anthropic.rs  fallback.rs  lib.rs  openai.rs  types.rs
crates/pa-mcp/: Cargo.toml
crates/pa-mcp/src/: bridge.rs  client.rs  config.rs  host.rs  lib.rs  transport.rs  types.rs
crates/pa-memory/: Cargo.toml
crates/pa-memory/src/: engine.rs  graph.rs  integration.rs  lib.rs  query.rs  types.rs  vector.rs
crates/pa-plugin-sdk/: Cargo.toml
crates/pa-plugin-sdk/src/: channel.rs  extension.rs  lib.rs  llm_provider.rs  plugin.rs  tool.rs
crates/pa-query/: Cargo.toml
crates/pa-query/src/: approval.rs  audit.rs  config.rs  engine.rs  error.rs  lib.rs  permission.rs  security.rs
crates/pa-task/: Cargo.toml
crates/pa-task/src/: cancel_token.rs  lib.rs  manager.rs  store.rs  types.rs
crates/pa-tools/: Cargo.toml
crates/pa-tools/src/: builtin.rs  lib.rs  registry.rs
crates/pa-tools/src/builtin/: bash.rs  glob_tool.rs  memory_query.rs  memory_store.rs  read_file.rs  search.rs  web_fetch.rs  write_file.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_FULL.md  CONFIGURATION.md  CRATES.md  DEPLOYMENT.md  README.md
scripts/: deploy-wsl-ubuntu24.sh  interactive-setup-config.sh  pa-dev-stack.sh
src/: cli.rs  daemon.rs  main.rs
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/src/app/: layout.tsx  page.tsx
web/src/app/agents/: page.tsx
web/src/app/alerts/: page.tsx
web/src/app/logs/: page.tsx
web/src/app/monitor/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/tasks/: page.tsx
web/src/components/: AgentList.tsx  ApprovalBar.tsx  ChatPanel.tsx  MessageBubble.tsx  Sidebar.tsx  StatusBadge.tsx  TaskDetail.tsx  TaskList.tsx  ThemeToggle.tsx
web/src/lib/: api.ts  connection.ts  store.tsx  types.ts  websocket.ts
web/src/styles/: globals.css
