[package]
name = "pa-agent"
version.workspace = true
edition.workspace = true
description = "Agent runtime for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-query = { workspace = true }
pa-memory = { workspace = true }
pa-tools = { workspace = true }
pa-task = { workspace = true }
pa-mcp = { workspace = true }
pa-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
