[package]
name = "pa-channel-feishu"
version.workspace = true
edition.workspace = true
description = "Feishu (Lark) channel plugin for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-plugin-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["multipart"] }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
