[package]
name = "pa-config"
version.workspace = true
edition.workspace = true
description = "Configuration system for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
