[package]
name = "pa-core"
version.workspace = true
edition.workspace = true
description = "Core types and traits for PersonalAssistant"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
