[package]
name = "pa-gateway"
version.workspace = true
edition.workspace = true
description = "Gateway control plane for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-agent = { workspace = true }
pa-config = { workspace = true }
pa-task = { workspace = true }
pa-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
