[package]
name = "pa-mcp"
version.workspace = true
edition.workspace = true
description = "MCP Host implementation for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
toml = { workspace = true }
eventsource-stream = { workspace = true }
