[package]
name = "pa-plugin-sdk"
version.workspace = true
edition.workspace = true
description = "Plugin SDK for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
