[package]
name = "pa-query"
version.workspace = true
edition.workspace = true
description = "Reask query loop engine for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-config = { workspace = true }
pa-llm = { workspace = true }
pa-memory = { workspace = true }
pa-tools = { workspace = true }
pa-task = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
