[package]
name = "pa-tools"
version.workspace = true
edition.workspace = true
description = "Tool system for PersonalAssistant"

[dependencies]
pa-core = { workspace = true }
pa-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
url = { workspace = true }
